# container-networking

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.sh
alpine/home/: CMakeLists.txt
alpine/home/src/: client.c  run_client.c  server.c  util.c
research/: alex_notes.md  brooke_notes.md  dakota_notes.md
src/: CMakeLists.txt  cgroups.c  cgroups.h  contained.c  contained.c.example  contained.h  error_handling.c  error_handling.h  namespaces.c  namespaces.h  syscalls.c  syscalls.h  utils.c  utils.h
test/: CMakeLists.txt  test_cgroups.c  test_namespaces.c  test_utils.c
